--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Project</title>
+	<title>Hāte Apparel</title>
+	<!-- FONT -->
+	<link href='https://fonts.googleapis.com/css?family=Poppins:400,500,300,700' rel='stylesheet' type='text/css'>
+	<script src="https://use.fontawesome.com/017a202a6f.js"></script>
 	<!-- require angular -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
+	<!-- bootstrap -->
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap-tpls.js'>
 	</script>
 
@@ -29,55 +34,11 @@
 
 	</script>
 	<!-- CONTROLLERS / FACTORIES -->
-  <script type="text/javascript" src="./factories/poll_factory.js"></script>
+  <script type="text/javascript" src="./factories/item_factory.js"></script>
   <script type="text/javascript" src="./controllers/dashboard_controller.js"></script>
 </head>
+
 <body ng-app='board'>
-	<div id="map"></div>
-<script>
-	// Note: This example requires that you consent to location sharing when
-	// prompted by your browser. If you see the error "The Geolocation service
-	// failed.", it means you probably did not give permission for the browser to
-	// locate you.
-
-	function initMap() {
-		var map = new google.maps.Map(document.getElementById('map'), {
-			center: {lat: -34.397, lng: 150.644},
-			zoom: 6
-		});
-		var infoWindow = new google.maps.InfoWindow({map: map});
-
-		// Try HTML5 geolocation.
-		if (navigator.geolocation) {
-			navigator.geolocation.getCurrentPosition(function(position) {
-				var pos = {
-					lat: position.coords.latitude,
-					lng: position.coords.longitude
-				};
-				console.log(pos);
-
-				infoWindow.setPosition(pos);
-				infoWindow.setContent('Location found.');
-				map.setCenter(pos);
-			}, function() {
-				handleLocationError(true, infoWindow, map.getCenter());
-			});
-		} else {
-			// Browser doesn't support Geolocation
-			handleLocationError(false, infoWindow, map.getCenter());
-		}
-	}
-
-	function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-		infoWindow.setPosition(pos);
-		infoWindow.setContent(browserHasGeolocation ?
-													'Error: The Geolocation service failed.' :
-													'Error: Your browser doesn\'t support geolocation.');
-	}
-</script>
-<script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXxXfl-htzkZY8PBQF1asMKpFj1-KEsjc&callback=initMap">
-</script>
   <div ng-view=''>
   </div>
 </body>
