--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
 	<!-- CONTROLLERS / FACTORIES -->
   <script type="text/javascript" src="./factories/item_factory.js"></script>
   <script type="text/javascript" src="./controllers/dashboard_controller.js"></script>
+  <script type="text/javascript" src="./controllers/carousel_controller.js"></script>
 </head>
 
 <body ng-app='board'>
