css color scheme

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,9 @@
         .when('/about',{
             templateUrl: 'partials/about.html'
         })
+        .when('/men',{
+            templateUrl: 'partials/men.html'
+        })        
         .otherwise({
           redirectTo: '/'
         });
