more work on nav

--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
         })
         .when('/men',{
             templateUrl: 'partials/men.html'
-        })        
+        })
         .otherwise({
           redirectTo: '/'
         });
@@ -58,7 +58,7 @@
           <li class="hvr-underline-from-center"><a href="#">Women</a></li>
       </ul>
       <ul id="navright" class="nav navbar-nav navbar-right">
-				<li><a href="#"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i></a></li>
+				<i uib-popover="I appeared on mouse enter!" popover-trigger="mouseenter" class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
       </ul>
     </div>
   </div>
@@ -108,56 +108,8 @@
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi placeat dolor molestias facere veritatis culpa amet fugiat debitis dolorem qui quidem consequuntur mollitia, nesciunt pariatur voluptatum! Dolor accusamus labore, sequi.</p>
     </div>
   </section>
-  <section>
-    <div class="container">
-      <h2>Your journey starts here.</h2>
-      <p> This is it. You've made it so far. There is no going back.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste molestias vel commodi, quae quaerat ex numquam. Consectetur corporis explicabo, qui labore, repellat dignissimos illo molestias maxime nisi a consequuntur?</p>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit fuga autem dolore, ex nobis, iste quasi, asperiores esse repellendus tempore, obcaecati numquam minima maxime! Laboriosam, ut ipsam magnam corporis aut.</p>
-      <h3>Get lost and find yourself.</h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi placeat dolor molestias facere veritatis culpa amet fugiat debitis dolorem qui quidem consequuntur mollitia, nesciunt pariatur voluptatum! Dolor accusamus labore, sequi.</p>
-    </div>
-  </section>
-  <section>
-    <div class="container">
-      <h2>Your journey starts here.</h2>
-      <p> This is it. You've made it so far. There is no going back.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste molestias vel commodi, quae quaerat ex numquam. Consectetur corporis explicabo, qui labore, repellat dignissimos illo molestias maxime nisi a consequuntur?</p>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit fuga autem dolore, ex nobis, iste quasi, asperiores esse repellendus tempore, obcaecati numquam minima maxime! Laboriosam, ut ipsam magnam corporis aut.</p>
-      <h3>Get lost and find yourself.</h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi placeat dolor molestias facere veritatis culpa amet fugiat debitis dolorem qui quidem consequuntur mollitia, nesciunt pariatur voluptatum! Dolor accusamus labore, sequi.</p>
-    </div>
-  </section>
-  <section>
-    <div class="container">
-      <h2>Your journey starts here.</h2>
-      <p> This is it. You've made it so far. There is no going back.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste molestias vel commodi, quae quaerat ex numquam. Consectetur corporis explicabo, qui labore, repellat dignissimos illo molestias maxime nisi a consequuntur?</p>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit fuga autem dolore, ex nobis, iste quasi, asperiores esse repellendus tempore, obcaecati numquam minima maxime! Laboriosam, ut ipsam magnam corporis aut.</p>
-      <h3>Get lost and find yourself.</h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi placeat dolor molestias facere veritatis culpa amet fugiat debitis dolorem qui quidem consequuntur mollitia, nesciunt pariatur voluptatum! Dolor accusamus labore, sequi.</p>
-    </div>
-  </section>
-  <section>
-    <div class="container">
-      <h2>Your journey starts here.</h2>
-      <p> This is it. You've made it so far. There is no going back.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste molestias vel commodi, quae quaerat ex numquam. Consectetur corporis explicabo, qui labore, repellat dignissimos illo molestias maxime nisi a consequuntur?</p>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit fuga autem dolore, ex nobis, iste quasi, asperiores esse repellendus tempore, obcaecati numquam minima maxime! Laboriosam, ut ipsam magnam corporis aut.</p>
-      <h3>Get lost and find yourself.</h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi placeat dolor molestias facere veritatis culpa amet fugiat debitis dolorem qui quidem consequuntur mollitia, nesciunt pariatur voluptatum! Dolor accusamus labore, sequi.</p>
-    </div>
-  </section>
-  <section>
-    <div class="container">
-      <h2>Your journey starts here.</h2>
-      <p> This is it. You've made it so far. There is no going back.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste molestias vel commodi, quae quaerat ex numquam. Consectetur corporis explicabo, qui labore, repellat dignissimos illo molestias maxime nisi a consequuntur?</p>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit fuga autem dolore, ex nobis, iste quasi, asperiores esse repellendus tempore, obcaecati numquam minima maxime! Laboriosam, ut ipsam magnam corporis aut.</p>
-      <h3>Get lost and find yourself.</h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi placeat dolor molestias facere veritatis culpa amet fugiat debitis dolorem qui quidem consequuntur mollitia, nesciunt pariatur voluptatum! Dolor accusamus labore, sequi.</p>
-    </div>
-  </section>
+
+
 </div>
 
   <div ng-view=''>
