--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
   <script type="text/javascript" src="./factories/item_factory.js"></script>
   <script type="text/javascript" src="./controllers/dashboard_controller.js"></script>
   <script type="text/javascript" src="./controllers/carousel_controller.js"></script>
+  <script type="text/javascript" src="./controllers/store_controller.js"></script>
 </head>
 
 <body ng-app='board' ng-controller="DashboardController">
