--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,9 @@
         .when('/men',{
             templateUrl: 'partials/men.html'
         })
+        .when('/women',{
+            templateUrl: 'partials/women.html'
+        })
         .otherwise({
           redirectTo: '/'
         });
